<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_consent_dialog"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="We care about your privacy"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_consentdetails"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/consent_text"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_positive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_btn_consent"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/consent_positive"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tv_negative"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_btn_consent"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/consent_negative"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="start"
        android:text="Learn more about your privacy..."
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_p1"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/policy_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@android:color/holo_blue_dark"
            android:text="  "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/tv_p2"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/policy_admob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_p3"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/policy_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>
    <LinearLayout
        android:visibility="gone"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_p4"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/policy_startapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@android:color/holo_blue_dark"
            android:text="  "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/tv_p5"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/policy_appnext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_p6"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/policy_mopub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_p7"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/policy_ironsource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_p8"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/policy_inmobi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>



</LinearLayout>